--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ByteThis</title>
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./dist/images/favicon.ico"
+      type="image/x-icon"
+    />
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./dist/css/main.css">
-</head>
-<body>
-    <h1>Hello world</h1>
+    <link rel="stylesheet" href="./dist/css/main.css" />
+  </head>
+  <body>
+    <main>
+      <section id="home">
+        <div class="container">
+          <header>
+            <div><img src="./dist/images/logo.png" alt="ByteThis" /></div>
+            <nav>
+              <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#stats">Stats</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </header>
+          <div class="banner">
+            <h2>
+              Watch out <br />
+              the modern responsive website!
+            </h2>
+            <a class="main-btn" href="#work">View our work</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Scripts -->
     <script src="./dist/js/main.js"></script>
-</body>
+  </body>
 </html>
