services, mobile menu

--- a/index.html
+++ b/index.html
@@ -11,34 +11,120 @@
       href="./dist/images/favicon.ico"
       type="image/x-icon"
     />
+    <!-- fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./dist/css/main.css" />
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <div class="container">
+        <!-- logo -->
+        <div>
+          <img src="./dist/images/logo.png" alt="ByteThis" />
+        </div>
+        <!-- navbar -->
+        <nav>
+          <ul>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#stats">Stats</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <!-- mobile menu toggler -->
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </header>
+    <!-- main -->
     <main>
+      <!-- home -->
       <section id="home">
+        <!-- banner -->
+        <div class="banner container">
+          <h2>
+            Watch out <br />
+            the modern responsive website!
+          </h2>
+          <a class="main-btn" href="#work">View our work</a>
+        </div>
+      </section>
+      <!-- services -->
+      <section id="services">
         <div class="container">
-          <header>
-            <div><img src="./dist/images/logo.png" alt="ByteThis" /></div>
-            <nav>
-              <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#stats">Stats</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </nav>
-          </header>
-          <div class="banner">
-            <h2>
-              Watch out <br />
-              the modern responsive website!
-            </h2>
-            <a class="main-btn" href="#work">View our work</a>
+          <div class="section-title">
+            <h3>Services</h3>
+            <div class="section-title-underline"></div>
+          </div>
+          <div class="services-container">
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-paint-brush-alt fa-3x"></i>
+              </div>
+              <div>
+                <h3>Web Design</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-laptop-code fa-3x"></i>
+              </div>
+              <div>
+                <h3>Web Development</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-mobile fa-3x"></i>
+              </div>
+              <div>
+                <h3>Mobile Apps</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-search fa-3x"></i>
+              </div>
+              <div>
+                <h3>Seo Optimization</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-pencil-ruler fa-3x"></i>
+              </div>
+              <div>
+                <h3>UX Design</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fad fa-phone-office fa-3x"></i>
+              </div>
+              <div>
+                <h3>Support</h3>
+                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
